# sdkmate

./: .gitignore  Cargo.toml  README-en.md  README.md  clippy.toml  config.toml  main.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/impls/: init.rs  list.rs  mod.rs  switch.rs
crates/core/: Cargo.toml
crates/sdkcore/: Cargo.toml
crates/sdkcore/src/: lib.rs
crates/sdkcore/src/env/: mod.rs  unix.rs  windows.rs
crates/sdkcore/src/link/: symlink.rs
crates/sdkcore/src/manager/: config.rs  init.rs  list.rs  mod.rs  switch.rs
crates/sdkcore/tests/: test_env.rs  test_symlink.rs  test_toml.rs
crates/util/: Cargo.toml
crates/util/src/: config_helper.rs  consts.rs  lib.rs  macros.rs  path.rs  sdk.rs  sdk_resources.rs  terminal.rs
crates/util/tests/: test_util.rs
