[package]
name = "sdkvm-cli"
version = "0.1.0"
edition = "2024"
description = "An SDK version manager for full-stack engineers"
repository = "https://github.com/borenchan/sdkvm-cli"
authors = ["boren1007@qq.com"]
license = "Apache-2.0"
[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
#  网络请求
reqwest = { version = "0.12.7" ,features = ["blocking",  "json", "gzip","multipart"]}

[[bin]]
name = "sdkvm"
path = "src/main.rs"