[package]
name = "cli"
version.workspace =  true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
sdkcore = { workspace = true }
util = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true}
