[package]
name = "sdkcore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
util = {workspace = true}
reqwest = {workspace = true}
anyhow = { workspace = true}
crossterm = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
unicode-width = { workspace = true }
[target.'cfg(windows)'.dependencies]
winreg = { workspace = true}
windows-sys = { workspace = true}