[package]
name = "util"
version.workspace =  true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true, version = "1.0.228", features = ["derive"] }
crossterm = { workspace = true }
anyhow = { workspace = true}
clap = { workspace = true}
